test/files/neg/t0903.check
t0903.scala:3: error: value += is not a member of Int
  x += 1
    ^
Expression does not convert to assignment because receiver is not assignable.
t0903.scala:4: error: reassignment to val
  x = 2
    ^
two errors found
